fixed flex, created grid gap, minor error fixed.

--- a/lesson3/styles/base.css
+++ b/lesson3/styles/base.css
@@ -4,37 +4,40 @@
     box-sizing: border-box;
 }
 a:hover{
-    color: rgba(227, 45, 26, 1);
+    color: rgba(227, 45, 26);
     text-decoration: none;
 }
 
-nav ul li a{
+nav ul{
     list-style-type: none;
     display: flex;
-    flex-flow: row;
+    flex-flow: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 1px;
+    padding: 10px;
     font-size: 1.2rem;
+    background-color: black;
+    line-height: 2.5rem;
+  }
+
+nav ul li a {
     text-decoration: none;
     color: white;
-    background-color: black;
-    border-radius: 0 0 5rem 5rem;
-  }
+}
 
 body{
     font-size: 16px;
     margin: auto;
     font-family: 'Courier New', Courier, monospace;
 }
+
 main, body, footer{
-    max-width: 760px;
+    max-width: 900px;
     margin: 0 auto;
-    line-height: 1.5rem;
     padding: 15px;
 }
 header{
-    background-color: rgba(227, 45, 26, 1);
+    background-color: rgba(227, 45, 26);
     color: rgb(255, 255, 255);
     border-radius: 1rem;
     text-align: center;
@@ -43,7 +46,6 @@ h1{
     font-family: 'Oleo Script', cursive;
     font-size: 3rem;
     padding: 15px;
-    line-height: 2.5rem;
 }
 h2 {
     font-family: 'Oleo Script', cursive;
@@ -63,7 +65,7 @@ main{
     border-style: double;
     grid-template-columns: 1;
     grid-template-rows: 1;
-
+    margin: 10px;
 }
 footer{
     background-color: black;
@@ -81,11 +83,11 @@ footer{
     border-radius: 5rem;
 }
 
-.line {
-    color: pink;
-}
 section{
     border: 1px solid black;
     display: block;
     flex-wrap: wrap;
+}
+p, div, h1, h2, h3, h4{
+    padding: 0 10px 0 10px;
 }
